# rawesome

./: .gitignore  LICENSE  kite.hs  kite.proto  mhempc.proto  mkprotos.sh  readme.txt
aero/: aero.m  aerodata.m  orig_aero.m  orig_aerodata.m
carousel-cpp/: .gitignore  Makefile  sender_example.cpp
carousel-opt/: carousel-opt.cabal
carousel-opt/src/: Draw.hs  Joy.hs  Main.hs  Model.hs
carousel-py/: collocation.py  config.ini  configspec.ini  dae.py  drawHorizons.py  dvmap.py  freemodel.py  freesim.py  idas_opt.py  joy.py  kite_pb2.py  kiteproto.py  model.py  ocp.py  ocputils.py  opt.py  pendulum_collocation.py  pendulum_model.py  pendulum_opt.py  pendulum_sim.py  run_protoc.sh  sim.py  simutils.py
carousel-sim/: carousel-sim.cabal
carousel-sim/src/: Draw.hs  Joy.hs  Main.hs  Model.hs
cllt/: CLLT_main.py  LLT_solver.py  geometry.py  naca0012_fit.py  optimize.py
cllt/data/: .gitignore
examples/: Makefile.protobufStuff  Makefile.wtfviz
examples/carousel/: .gitignore  Makefile  betty_conf.py  carousel_corkscrew.py  carousel_crosswind_homotopy.py  carousel_crosswind_poweropt.py  carousel_dae.py  carousel_homotopy.py  carousel_poweropt.py  carousel_sim.py  convert_trajectory.py  finalize_trajectory.py  fourier_fit.py
examples/carousel/plotter/: Main.hs
examples/carousel/viz/: Multi.hs  viz.cabal
examples/drag_mode/: Makefile  drag_dae.py  drag_homotopy.py  drag_poweropt.py
examples/drag_mode/data/: .gitignore
examples/drag_mode/plotter/: Main.hs  plotter.cabal
examples/drag_mode/viz/: Multi.hs
examples/pumping_mode/: Makefile  betty_conf.py  pumping_dae.py  pumping_homotopy.py  pumping_poweropt.py  pumping_sim.py
examples/pumping_mode/plotter/: Main.hs  plotter.cabal
examples/pumping_mode/viz/: Multi.hs
examples/rocket/: Makefile  make_rocket_protos.py  optimize.py  rocket_dae.py
examples/rocket/data/: .gitignore
examples/rocket/plotter/: Main.hs  plotter.cabal
kite_sysid/: Makefile  carousel_dae.py  lets_id_some_sys.py  load_data.py
kite_sysid/data/: .gitignore
kite_sysid/viz/: Multi.hs  viz.cabal
kitevis/: kitevis.cabal  run_hprotoc.sh
kitevis/src/: Draw.hs  DrawAC.hs  Kite.hs  KiteOpt.hs  KiteSim.hs  Main.hs  MultiCarousel.hs  PendulumOpt.hs  PendulumOptVis.hs  Quotes.hs  TestQuotes.hs
kitevis/src/Kite/: CarouselState.hs  KiteOpt.hs
plot-ho-matic/: loadprotos.py  plot-ho-matic.cabal  plotstuff.py
plot-ho-matic/src/: Main.hs  ParseArgs.hs
rawe/: .gitignore  __init__.py  aero.py  carouselSteadyState.py  carousel_collocation.py  carouselmodel.py  carouselopt.py  carouselsim.py  collmap.py  collmaps.py  collocation.py  collutils.py  config.py  crosswind_collocation.py  crosswind_homotopy.py  crosswindmodel.py  crosswindocp.py  dae.py  drawHorizons.py  dvmap.py  fourier_fit.py  freemodel.py  freesim.py  generateTestCarouselModel.py  idas_opt.py  joy.py  kiteTelemetry.py  kite_pb2.py  kitemhe.py  kiteproto.py  kiteutils.py  load_and_plot.py  makeOctaveCarousel.py  model.py  multipleShooting.py  ocputils.py  opt.py  pendulum_collocation.py  pendulum_model.py  pendulum_opt.py  (+16 more)
rawe/TestCarousel/: CMakeLists.txt  FindMHEExport.cmake  MHE.cpp  MHE.cpp~  MPC_MHE.m  NMPC.cpp  NMPC.cpp~  SaveReference.m
rawe/TestCarousel/CameraCalibration/: PC2.txt  RPC2.txt  pos_marker_body2.txt  pos_marker_body3.txt
rawe/TestCarousel/IMU/: RIMU.txt
rawe/TestCarousel/Matlabfunctions/: Covariance.m  MHEmeasurements.m  MHEmeasurements2.m  MHEweights.m  generate_reference.m  getEstimatedState.m  getMHE.m  getMPC.m  initializeMHE.m  initializeMPC.m  invariantJac.m  linint.m  newMeasurement.m  plotDebug.m  (+2 more)
rawe/collocation/: __init__.py  collmaps.py  collocation.py  collpoints.py  trajectory.py
rawe/dae/: __init__.py  acadoModelExport.py  acadoSimExport.py  dae.py  detectLinearSubsystems.py  octaveSimExport.py  rienIntegrator.py  rienIntegratorInterface.py  rienModelExport.py
rawe/models/: __init__.py  acadoExport.py  acadoModelExport.py  acadoSimExport.py  aero.py  arianne_conf.py  betty_conf.py  carousel.py  crosswind.py  crosswind_drag.py  crosswind_drag_mode.py  dae.py  free.py  highwind_carousel.py  octaveSimExport.py  pendulum.py  pendulum2.py
rawe/newton/: __init__.py  msmaps.py  multipleShooting.py  newton.py  newton2.py  nmhe.py  nmheMaps.py  nmpc.py  nmpcMaps.py
rawe/ocp/: MpcMhe.py  Ocp.py  __init__.py  acadoOcpExport.py  exportOcp.py  hpmpc.py  ocg_interface.py  ocprt.py  phase1.py  qpdunes.py  qpoases.py  writeAcadoOcpExport.py
rawe/rtIntegrator/: __init__.py  rtIntegrator.py  rtIntegratorExport.py  rtIntegratorInterface.py  rtModelExport.py
rawe/utils/: __init__.py  bcolors.py  codegen.py  memoize.py  mkprotobufs.py  mkprotos.py  options.py  pkgconfig.py  subprocess_tee.py
rawekite/: __init__.py  carouselSteadyState.py  communicator.py  crosswind_steady_state.py  kiteTelemetry.py  kiteproto.py  kiteutils.py
studies/: betty_conf.py  carouselSteadyState.py  carousel_collocation.py  carousel_conf.py  carouselsim.py  config.ini  config.py  configspec.ini  crosswind_collocation.py  crosswind_drag_collocation.py  crosswind_drag_homotopy.py  crosswind_homotopy.py  detectStructure.py  detectStructure2.py  drawHorizons.py  fourier_fit.py  freesim.py  highwind_carousel.ini  highwind_carousel_conf.py  idas_opt.py  kitemhe.py  l1_slacks_example.py  makeOctaveCarousel.py  pendulum_collocation.py  pendulum_opt.py  pendulum_sim.py  protoFakeSim.py  protoMovie.py  rocket.py  stingray.ini  stingray_conf.py  testAcadoOutput.py  testMheMpc.py  testMpcExport.py  testOcpExport.py  testRienIntegrator.py  testRtIntegrator.py  transition_collocation.py
studies/drag_mode/: crosswind_drag_homotopy.py  crosswind_drag_poweropt.py  kiteCallback.py  makeprotos.py
studies/test_mhe_mpc_export/: MHE.py  NMPC.py  NMPC.py~  mpc_mhe_simulation.py  mpc_mhe_utils.py
trajectory-gui/: trajectory-gui.cabal
trajectory-gui/src/: Kite.hs  Main.hs
trajectory-gui/src/Kite/: PendulumOpt.hs  TestMessages.hs
wtfviz/: wtfviz.cabal
wtfviz/src/: DrawAC.hs  KiteSim.hs  MheMpcViz.hs  MultiCarousel.hs  ParseArgs.hs  PendulumOpt.hs  Quotes.hs  hello.hs  plotter.hs
(+30 files in other folders)
