name:                carousel-opt
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable carousel-opt
  hs-source-dirs:    src
  main-is:           Main.hs

  other-modules:     Joy
                     Draw
                     Model
  build-depends:     base ==4.6.*,
                     SDL,
                     not-gloss,
                     spatial-math,
                     latc-types,
                     dvda,
                     vector,
                     hmatrix,
                     hcasadi
  ghc-options:       -O2 -fllvm -threaded
