name:                kitevis
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable kitevis
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Draw
  build-depends:     base ==4.6.*,
                     random,
                     not-gloss,
                     spatial-math,
                     hmatrix,
                     protocol-buffers,
                     bytestring,
                     zeromq-haskell
  ghc-options:       -O2 -threaded

executable pendvis
  hs-source-dirs:    src
  main-is:           PendulumOptVis.hs
  other-modules:     Draw
  build-depends:     base ==4.6.*,
                     not-gloss,
                     spatial-math,
                     protocol-buffers,
                     bytestring,
                     zeromq-haskell
  ghc-options:       -O2 -threaded
