name:                kitevis
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable kitesim
  hs-source-dirs:    src
  main-is:           KiteSim.hs
  other-modules:     DrawAC
  build-depends:     base >= 4.5.0 && < 4.7,
                     random,
                     not-gloss >= 0.5.0,
                     spatial-math,
                     hmatrix,
                     protocol-buffers,
                     bytestring,
                     zeromq-haskell,
                     ekg
  ghc-options:       -O2 -threaded -with-rtsopts=-T

executable multicarousel
  hs-source-dirs:    src
  main-is:           MultiCarousel.hs
  other-modules:     DrawAC, ParseArgs
  build-depends:     base >= 4.5.0 && < 4.7,
                     cmdargs >= 0.10,
                     random,
                     not-gloss >= 0.5.0,
                     spatial-math,
                     hmatrix,
                     protocol-buffers,
                     bytestring,
                     zeromq-haskell,
                     ekg
  ghc-options:       -O2 -threaded -with-rtsopts=-T

executable pendopt
  hs-source-dirs:    src
  main-is:           PendulumOpt.hs
  other-modules:     DrawAC
  build-depends:     base >= 4.5.0 && < 4.7,
                     not-gloss >= 0.5.0,
                     spatial-math,
                     protocol-buffers,
                     bytestring,
                     zeromq-haskell,
                     ekg
  ghc-options:       -O2 -threaded -with-rtsopts=-T
