name:                trajectory-gui
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable trajectory-gui
  hs-source-dirs:    src
  main-is:           Main.hs
--  other-modules:
  build-depends:     base >= 4.5.0 && < 4.7,
                     random,
                     gtk,
                     zeromq-haskell,
                     containers,
                     vector,
                     protocol-buffers,
                     bytestring

  ghc-options:       -O2 -threaded
